# CAMEAL-2

./: .coverage  .gitignore  .secrets.baseline  Audit_Trail.txt  Authentication_Subsystem.txt  CAMEAL_Architecture.txt  LICENSE  README.md  Repository_Standard.txt  Security_Architecture.txt  Security_Flow.txt  Security_Middleware.txt  Security_Package.txt  Sessions.txt  authentication_workflow.txt  directory_structure.txt  milestones.txt  phase_1.txt  phase_2.txt  pyproject.toml  requirements.txt  requirements_structure.txt  test.py
cameal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: logging.py  routes.yaml  settings.py
config/routing/: escalation.yaml  permissions.yaml  routes.yaml  workflows.yaml
context/: ARCHITECTURE.md  DESIGN.md  README.md  __init__.py  context.py  context_builder.py  context_cache.py  context_loader.py  context_provider.py  context_registry.py  context_resolver.py  context_validator.py  exceptions.py  institutional.py  jurisdictional.py  manifest.yaml  metadata_validator.py  operational.py  spatial.py  structure.txt  temporal.py  yaml_context_provider.py
docs/: CAMEAL_ENGINEERING_PRINCIPLES.md  engineering_standard_v1.0.md
kernel/: API.md  ARCHITECTURE.md  CHANGELOG.md  DESIGN.md  EXECUTION_FLOW.md  EXTENSION_GUIDE.md  KERNEL_PRINCIPLES.md  Kernel_Structure.txt  README.md  VERSION.md  __init__.py  base.py  bootstrap.py  event_bus.py  events.py  exceptions.py  kernel.py  lifecycle.py  manifest.yaml  registry.py  request.py  response.py  route.py  router.py  state_manager.py  structure.txt  validators.py  version.py
kernel/bootstrap/: API.md  ARCHITECTURE.md  DESIGN.md  EXECUTION_FLOW.md  README.md  __init__.py  bootstrap.py  builder.py  configuration.py  dependency_graph.py  discovery.py  exceptions.py  initializer.py  loader.py  manifest.yaml  registrar.py  validator.py  version.py
kernel/container/: API.md  ARCHITECTURE.md  DESIGN.md  EXECUTION_FLOW.md  README.md  __init__.py  cache.py  container.py  dependency.py  exceptions.py  injector.py  registration.py  registry.py  resolver.py  scopes.py  state.py  structure.md  validator.py  version.py
kernel/context/: API.md  ARCHITECTURE.md  EXECUTION_FLOW.md  README.md  __init__.py  context_builder.py  context_registry.py  context_validator.py  exceptions.py  execution_context.py  manifest.yaml  provenance_context.py  request_context.py  security_context.py  structure.txt  trace_context.py  version.p  version.py  workflow_context.py
kernel/diagnostics/: API.md  ARCHITECTURE.md  DESIGN.md  README.md  __init__.py  diagnostics.py  lifecycle.py  manifest.yaml
kernel/events/: API.md  ARCHITECTURE.md  DESIGN.md  EXECUTION_FLOW.md  README.md  Structure.txt  __init__.py  context.py  diagnostics.py  dispatcher.py  event.py  event_bus.py  event_envelope.py  event_types.py  exceptions.py  execution_pipeline.py  filters.py  manifest.yaml  middleware.py  priority.py  publisher.py  registry.py  serializer.py  signals.py  subscriber.py  subscription.py  validator.py  version.py
kernel/lifecycle/: API.md  ARCHITECTURE.md  DESIGN.md  EXECUTION_FLOW.md  README.md  __init__.py  diagnostics.py  exceptions.py  health.py  lifecycle.py  manager.py  manifest.yaml  observer.py  states.py  structure.txt  transitions.py  version.py
kernel/managers/: API.md  ARCHITECTURE.md  DESIGN.md  EXECUTION_FLOW.md  README.md  __init__.py  context_manager.py  engine_manager.py  exceptions.py  manager.py  manifest.yaml  plugin_manager.py  registry.py  repository_manager.py  scheduler_manager.py  validator.py  version.py  workflow_manager.py
kernel/models/: __init__.py  execution_context.py  execution_plan.py  request.py  response.py  version.py
kernel/orchestrator/: API.md  ARCHITECTURE.md  DESIGN.md  EXECUTION_FLOW.md  __init__.py  dispatcher.py  exceptions.py  execution_plan.py  executor.py  manifest.yaml  orchestrator.py  pipeline.py  plan.py  planner.py  router.py  validator.py  version.py
kernel/plugins/: README.md  __init__.py  activator.py  discovery.py  exceptions.py  loader.py  manifest.py  registry.py  version.py
kernel/providers/: ARCHITECTURE.md  README.md  Structure.txt  __init__.py
kernel/scheduler/: API.md  (+7 more)
query/: __init__.py  query.py  query_builder.py  query_engine.py  query_intent.py  query_manager.py  query_registry.py  query_request.py  query_resolver.py  query_response.py  query_router.py  query_validator.py  structure.txt
repository/: ARCHITECTURE.md  DESIGN.md  README.md  governance_asset.py  manifest.yaml  repository.py  repository_builder.py  repository_factory.py  repository_manager.py  repository_provider.py  repository_registry.py  repository_resolver.py  repository_validator.py
security/: ARCHITECTURE.md  __init__.py  audit.py  authentication_request.py  authentication_result.py  authenticator.py  authorization.py  authorization_result.py  authorizer.py  constraint.py  context.py  decision.py  decision_engine.py  decision_log.py  default_role_permission_provider.py  exceptions.py  hashing.py  identity_record.py  in_memory_permission_provider.py  memory_provider.py  memory_session_provider.py  obligation.py  permissions.py  policy.py  policy_engine.py  policy_store.py  risk_engine.py  risk_level.py  session.py  session_provider.py  user.py  version.py
services/: ARCHITECTURE.md  DESIGN.md  README.md  __init__.py  exceptions.py  manifest.yaml  service.py  service_registry.py
tests/: conftest.py  test_example.py
(+427 files in other folders)
